--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "redux-modal",
-  "description": "High order component to connect a modal to the store.",
+  "name": "react-components",
+  "description": "Collection of react components for your application.",
   "author": "Vince Chavez <vchavez92780@gmail.com> (http://github.com/pcs2112)",
   "license": "MIT",
   "version": "0.0.1",
@@ -10,9 +10,8 @@
   },
   "homepage": "https://github.com/pcs2112/react-components",
   "keywords": [
-    "Redux",
     "React",
-    "Modal",
+    "Components",
     "Webpack",
     "es6"
   ],
