--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
     "prop-types": "^15.5.10"
   },
   "devDependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "^6.23.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "chai": "3.5.0",
+    "chai": "^4.1.1",
     "eslint": "1.10.3",
     "eslint-config-airbnb": "0.1.0",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-import": "^0.8.0",
     "eslint-plugin-react": "^3.5.0",
-    "mocha": "3.3.0",
-    "webpack": "^2.2.1"
+    "mocha": "3.5.0",
+    "webpack": "^3.5.5"
   }
 }
