--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build:lib": "babel src --out-dir lib"
   },
   "dependencies": {
+    "javascript-utils": "git+https://github.com/pcs2112/javascript-utils.git",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
