--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.0.0",
+    "react-router": "^3.0.5",
     "react-transition-group": "^2.2.0"
   },
   "devDependencies": {
