--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "main": "./lib/index.js",
   "scripts": {
-    "build": "npm run build:lib",
+    "build": "yarn run build:lib",
     "build:lib": "babel src --out-dir lib"
   },
   "dependencies": {
@@ -32,19 +32,20 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^4.1.1",
-    "eslint": "1.10.3",
-    "eslint-config-airbnb": "0.1.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^1.0.0",
-    "eslint-plugin-import": "^0.8.0",
-    "eslint-plugin-react": "^3.5.0",
-    "mocha": "3.5.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "mocha": "^4.0.1",
     "webpack": "^3.5.5"
   }
 }
