--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Collection of react components for your application.",
   "author": "Vince Chavez <vchavez92780@gmail.com> (http://github.com/pcs2112)",
   "license": "MIT",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "repository": {
     "type": "git",
     "url": "https://github.com/pcs2112/react-components"
@@ -26,7 +26,7 @@
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-transition-group": "^2.2.0"
+    "react-transition-group": "^2.3.0-beta.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
