--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-transition-group": "^2.3.0-beta.0"
+    "react-transition-group": "2.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
