--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prop-types": "15.6.2",
     "react": "16.7.0",
     "react-dom": "16.7.0",
-    "react-transition-group": "2.5.2"
+    "react-transition-group": "2.5.2",
+    "semantic-ui-react": "^0.84.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
