--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "prop-types": "15.6.2",
     "react": "16.7.0",
     "react-dom": "16.7.0",
+    "react-redux": "^6.0.0",
     "react-transition-group": "2.5.2",
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
     "semantic-ui-react": "^0.84.0"
   },
   "devDependencies": {
