--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "15.6.2",
     "react": "16.7.0",
     "react-dom": "16.7.0",
+    "react-html-id": "^0.1.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "2.5.2",
